src/test/testCases/semanticErrors/emptyTransBlock.moore
moore M1 {
    states {a1, a2}

    input {
        pins {
            clock:  10,
            p1: 11,
            p2: 12
        }

        transition {
            a1 {
            }
            a2 {
            }
        }
    }

    output {
        pins {
            m1: 3,
            m2: 4
        }

        function {}
    }
}
